# When you add a new file to the engine, please add it to the lists below.
 ADD_LIBRARY(Engine
    src/Window.cpp
    include/math/VectorMath.hpp
    include/math/VGDMath.hpp
    include/Decorators.h
    include/Types.h
    include/Vector.hpp
    include/Vector.inl
    include/OVOX.h
    include/VGDAssert.hpp
    include/Events.hpp
    include/Window.h
 )
